--- a/src/main/resources/static/include/header.html
+++ b/src/main/resources/static/include/header.html
@@ -1,25 +1,28 @@
 <html>
 <head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <script src="http://code.jquery.com/jquery-latest.min.js"></script>
 <link rel="stylesheet" href="../css/header.css">
+<script src="../js/header.js"></script>
 <link href="https://fonts.googleapis.com/css?family=Nanum+Gothic&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Damion&display=swap" rel="stylesheet">
 </head>
 <meta charset="utf-8">
-<div class="user-nav">
-<span><a href="/sign">JOIN</a></span>
-<span><a href="/login">LOGIN</a></span>
-<span><a href="/cart">CART</a></span>
-</div>
-<div class="title"><a href="/">Blooks Brothers</a></div>
+
 <div class="nav">
-<span><a href="/top" style="font-weight:bold;color:crimson">NEW ITEM</a></span>
-<span><a href="/top">OUTER</a></span>
-<span><a href="/bottom">TEE</a></span>
-<span><a href="/top">SHIRTS</a></span>
-<span><a href="/bottom">PANTS</a></span>
-<span><a href="/top">BAG</a></span>
-<span><a href="/bottom">SHOES</a></span>
-<span><a href="/bottom">ACC</a></span>
+<div><h1 href="/top" style="font-weight:bold;color:crimson">MENU</h1></div>
+<div><a href="/top">컴퓨터</a></div>
+<div><a href="/top">에어컨</a></div>
+<div><a href="/top">청소기</a></div>
+<div><a href="/top">노트북</a></div>
+<div><a href="/top">스피커</a></div>
+<div><a href="/top">휴대기기</a></div>
 </div>
+
+<div class="nav-bar">
+<button class="nav-toggle-btn" id="toggle-off">三</button>
+</div>
+
+<div class="title"><a href="/">Review Web Site</a></div>
+
 </html>
