--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Blooks Brothers</title>
+<title>Review Web Site</title>
 <script src="http://code.jquery.com/jquery-latest.min.js"></script>
 <script type="text/javascript" src="./js/index.js"/></script>
 <link rel="stylesheet" type="text/css" href="./css/index.css?ver=0">
@@ -12,14 +12,82 @@
 </head>
 <body>
 <div class="header"></div>
+<div class="index-body">
 <div class="button-div">
 <button class="banner-slide-btn">></button>
 </div>
 <div class="banner">
-<div class="main-img1"></div>
-<div class="main-img2"></div>
-<div class="main-img3"></div>
+<img class="main-img1"src="../img/1.jpg">
 </div>
+<button class="review-slide-btn" id="review-slide-left-btn"><</button>
+<button class="review-slide-btn" id="review-slide-right-btn">></button>
 
+<h1 class="index-title">New Review</h1>
+<div class="new-review">
+	<div class="document" id="doc-first">
+		<img src="../img/4.jpg">
+		<h1>여름 샌들리뷰</h1>
+		<p>여름에 필수템인 샌들에 대해서 알아보고 다양한 제품을 비교한 후 작성된 리뷰입니다.</p>
+	</div>
+		<div class="document">
+		<img src="../img/5.jpg">
+		<h1>라이젠 3세대 리뷰</h1>
+		<p>새로 출시된 Cpu에 대해 알아보고 라이젠이 얼마나 성장했고 인텔의 Cpu 성능과 비교분석 해본 리뷰입니다. </p>
+	</div>
+		<div class="document" >
+		<img src="../img/4.jpg">
+		<h1>여름 샌들리뷰</h1>
+		<p>여름에 필수템인 샌들에 대해서 알아보고 다양한 제품을 비교한 후 작성된 리뷰입니다.</p>
+	</div>
+		<div class="document">
+		<img src="../img/5.jpg">
+		<h1>라이젠 3세대 리뷰</h1>
+		<p>새로 출시된 Cpu에 대해 알아보고 라이젠이 얼마나 성장했고 인텔의 Cpu 성능과 비교분석 해본 리뷰입니다. </p>
+	</div>
+		<div class="document" >
+		<img src="../img/4.jpg">
+		<h1>여름 샌들리뷰</h1>
+		<p>여름에 필수템인 샌들에 대해서 알아보고 다양한 제품을 비교한 후 작성된 리뷰입니다.</p>
+	</div>
+		<div class="document">
+		<img src="../img/5.jpg">
+		<h1>라이젠 3세대 리뷰</h1>
+		<p>새로 출시된 Cpu에 대해 알아보고 라이젠이 얼마나 성장했고 인텔의 Cpu 성능과 비교분석 해본 리뷰입니다. </p>
+	</div>		<div class="document" >
+		<img src="../img/4.jpg">
+		<h1>여름 샌들리뷰</h1>
+		<p>여름에 필수템인 샌들에 대해서 알아보고 다양한 제품을 비교한 후 작성된 리뷰입니다.</p>
+	</div>
+		<div class="document">
+		<img src="../img/5.jpg">
+		<h1>라이젠 3세대 리뷰</h1>
+		<p>새로 출시된 Cpu에 대해 알아보고 라이젠이 얼마나 성장했고 인텔의 Cpu 성능과 비교분석 해본 리뷰입니다. </p>
+	</div>		<div class="document" >
+		<img src="../img/4.jpg">
+		<h1>여름 샌들리뷰</h1>
+		<p>여름에 필수템인 샌들에 대해서 알아보고 다양한 제품을 비교한 후 작성된 리뷰입니다.</p>
+	</div>
+		<div class="document">
+		<img src="../img/5.jpg">
+		<h1>라이젠 3세대 리뷰</h1>
+		<p>새로 출시된 Cpu에 대해 알아보고 라이젠이 얼마나 성장했고 인텔의 Cpu 성능과 비교분석 해본 리뷰입니다. </p>
+	</div>
+</div>
+	<h1 class="index-title">New Item</h1>
+	
+	<div class="new-item">
+	<div class="document">
+		<img src="../img/5.jpg">
+		<h1>라이젠 3700x</h1>
+		<p>새로 출시된 Cpu </p>
+	</div>
+	<div class="document">
+		<img src="../img/6.jpg">
+		<h1>자연 휴양림 이용권</h1>
+		<p>피톤치드가 넘쳐나는 산책로가 있는 휴양림 </p>
+	</div>
+	</div>
+</div>
+</div>
 </body>
 </html>
