--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -14,85 +14,93 @@
 <div class="header"></div>
 <div class="index-body">
 <div class="button-div">
-<button class="banner-slide-btn">></button>
+<button class="slide-btn" id="banner-slide-right-btn">></button>
 </div>
 <div class="banner">
 <img class="main-img1"src="../img/1.jpg">
 </div>
-<button class="review-slide-btn" id="review-slide-left-btn"><</button>
-<button class="review-slide-btn" id="review-slide-right-btn">></button>
+<button class="slide-btn" id="item-slide-left-btn"><</button>
+<button class="slide-btn" id="item-slide-right-btn">></button>
 
-<h1 class="index-title">New Review</h1>
-<div class="new-review">
-	<div class="review-section" id="sec1">
-	<div class="document" id="doc-first">
+<h1 class="index-title">New Item</h1>
+<div class="new-item">
+	<div class="item-section" id="sec1">
+	<div class="item-section-slot" id="doc-first">
 		<img src="../img/4.jpg">
-		<h1>여름 샌들리뷰</h1>
-		<p>여름에 필수템인 샌들에 대해서 알아보고 다양한 제품을 비교한 후 작성된 리뷰입니다.</p>
+		<a href="/">여름 샌들</a>
+		<p>9990원(Sale 5%)</p>
 	</div>
-		<div class="document">
+	<div class="item-section-slot">
 		<img src="../img/5.jpg">
-		<h1>라이젠 3세대 리뷰</h1>
-		<p>새로 출시된 Cpu에 대해 알아보고 라이젠이 얼마나 성장했고 인텔의 Cpu 성능과 비교분석 해본 리뷰입니다. </p>
+		<a>라이젠 3700x</a>
+		<p>387000원 (Sale 15%)</p>
 	</div>
-		<div class="document" >
+	<div class="item-section-slot" id="doc-first">
 		<img src="../img/4.jpg">
-		<h1>여름 샌들리뷰</h1>
-		<p>여름에 필수템인 샌들에 대해서 알아보고 다양한 제품을 비교한 후 작성된 리뷰입니다.</p>
+		<a href="/">여름 샌들</a>
+		<p>9990원(Sale 5%)</p>
 	</div>
-		<div class="document">
+		<div class="item-section-slot">
 		<img src="../img/5.jpg">
-		<h1>라이젠 3세대 리뷰</h1>
-		<p>새로 출시된 Cpu에 대해 알아보고 라이젠이 얼마나 성장했고 인텔의 Cpu 성능과 비교분석 해본 리뷰입니다. </p>
+		<a>라이젠 3700x</a>
+		<p>387000원 (Sale 15%)</p>
 	</div>
-		<div class="document" >
+	<div class="item-section-slot" id="doc-first">
 		<img src="../img/4.jpg">
-		<h1>여름 샌들리뷰</h1>
-		<p>여름에 필수템인 샌들에 대해서 알아보고 다양한 제품을 비교한 후 작성된 리뷰입니다.</p>
+		<a href="/">여름 샌들</a>
+		<p>9990원(Sale 5%)</p>
 	</div>
 	</div>
 	
-	<div class="review-section" id="sec2">
-		<div class="document">
-		<img src="../img/5.jpg">
-		<h1>라이젠 3세대 리뷰</h1>
-		<p>새로 출시된 Cpu에 대해 알아보고 라이젠이 얼마나 성장했고 인텔의 Cpu 성능과 비교분석 해본 리뷰입니다. </p>
-	</div>		<div class="document" >
+	<div class="item-section" id="sec2">
+<div class="item-section-slot" id="doc-first">
 		<img src="../img/4.jpg">
-		<h1>여름 샌들리뷰</h1>
-		<p>여름에 필수템인 샌들에 대해서 알아보고 다양한 제품을 비교한 후 작성된 리뷰입니다.</p>
-	</div>
-		<div class="document">
-		<img src="../img/5.jpg">
-		<h1>라이젠 3세대 리뷰</h1>
-		<p>새로 출시된 Cpu에 대해 알아보고 라이젠이 얼마나 성장했고 인텔의 Cpu 성능과 비교분석 해본 리뷰입니다. </p>
-	</div>		<div class="document" >
+		<a href="/">여름 샌들</a>
+		<p>9990원(Sale 5%)</p>
+	</div><div class="item-section-slot" id="doc-first">
 		<img src="../img/4.jpg">
-		<h1>여름 샌들리뷰</h1>
-		<p>여름에 필수템인 샌들에 대해서 알아보고 다양한 제품을 비교한 후 작성된 리뷰입니다.</p>
+		<a href="/">여름 샌들</a>
+		<p>9990원(Sale 5%)</p>
+	</div><div class="item-section-slot" id="doc-first">
+		<img src="../img/4.jpg">
+		<a href="/">여름 샌들</a>
+		<p>9990원(Sale 5%)</p>
+	</div><div class="item-section-slot" id="doc-first">
+		<img src="../img/4.jpg">
+		<a href="/">여름 샌들</a>
+		<p>9990원(Sale 5%)</p>
 	</div>
-		<div class="document">
-		<img src="../img/5.jpg">
-		<h1>라이젠 3세대 리뷰</h1>
-		<p>새로 출시된 Cpu에 대해 알아보고 라이젠이 얼마나 성장했고 인텔의 Cpu 성능과 비교분석 해본 리뷰입니다. </p>
+	<div class="item-section-slot" id="doc-first">
+		<img src="../img/4.jpg">
+		<a href="/">여름 샌들</a>
+		<p>9990원(Sale 5%)</p>
 	</div>
-	</div>
-</div>
-	<h1 class="index-title">New Item</h1>
 	
-	<div class="new-item">
-	<div class="document">
-		<img src="../img/5.jpg">
-		<h1>라이젠 3700x</h1>
-		<p>새로 출시된 Cpu </p>
-	</div>
-	<div class="document">
-		<img src="../img/6.jpg">
-		<h1>자연 휴양림 이용권</h1>
-		<p>피톤치드가 넘쳐나는 산책로가 있는 휴양림 </p>
-	</div>
 	</div>
 </div>
+	<div class="item-section-nav">
+		<div class="nav-circle" id="nav-circle1"></div>
+		<div class="nav-circle" id="nav-circle2"></div>
+	</div>
+	<h1 class="index-title" id="new-review-title">New Review</h1>
+	
+	<div class="new-review">
+	<div class="new-review-slot">
+		<img src="../img/5.jpg">
+		<h1>라이젠 3700x 리뷰</h1>
+		<p>1년 3개월만에 세대교체가 이루어지는 AMD 3세대 라이젠 프로세서가 7월 7일 오늘부로 공식적으로 시장에 선보여진다.
+
+이번 3세대 라이젠은 12nm에서 7nm로 미세공정화 했으며 이를 기반으로 아키텍처 차원에서의 구조적인 변화를 꾀함과 동시에 2세대 제품군들에게서 아쉬웠던 부분들을 보강하고 개선한 구조를 골자로 하고 있다.
+
+그래서 케이벤치에서는 이번 Zen2의 아키텍처에서 어떠한 변경점이 있는지 살펴보고난 뒤, 전세대 R7 2700X와 동급 라인업인 R7 3700X의 성능과 그 차이를 살펴보는 시간을 마련했다. </p>
+	</div>
+	<div class="new-review-slot">
+		<img src="../img/7.jpg">
+		<h1>LG전자 FQ19P8DRA2 리뷰</h1>
+		<p>바야흐로 에어컨의 계절이다. 작년 6월 후엔 설치가 2~3주 가량 걸려 무더운 여름날이 되어서야 겨우 에어컨을 설치했던 기억을 되짚어보면, 다행히도 5월이 구매 적기임에 틀림없다. 그렇다면 어디서 구매하는 것이 저렴하고, 보다 스트레스를 적게 받을 수 있을까? 온라인 에어컨 구매시 실질 꿀팁을 살펴보도록 하자. </p>
+	</div>
+
+	</div>
 </div>
 </body>
 </html>
