헤더에 검색창 추가,메뉴,검색,닫기 아이콘으로 수정,토글 기능 추가

--- a/src/main/resources/static/include/header.html
+++ b/src/main/resources/static/include/header.html
@@ -10,7 +10,7 @@
 <meta charset="utf-8">
 
 <div class="nav">
-<div><h1 href="/top" style="font-weight:bold;color:crimson">MENU</h1></div>
+<div><h1 style="font-weight:bold;color:crimson">MENU</h1></div>
 <div><a href="/top">컴퓨터</a></div>
 <div><a href="/top">에어컨</a></div>
 <div><a href="/top">청소기</a></div>
@@ -20,9 +20,15 @@
 </div>
 
 <div class="nav-bar">
-<button class="nav-toggle-btn" id="toggle-off">三</button>
+<button class="nav-toggle-btn" id="toggle-off"><img class="nav-toggle-icon" src="../img/icon/list.png"></button>
 </div>
 
-<div class="title"><a href="/">Review Web Site</a></div>
+<div class="title">
+<div class="search">
+	<input class="search-text" type="text" maxlength="40" placeholder="검색어를 입력해주세요.">
+	<img class="search-icon" id="search-toggle-btn"src="../img/icon/magnifier.png">
+</div>
+<a href="/">Review Web Site</a>
+</div>
 
 </html>
