--- a/src/main/resources/static/css/header.css
+++ b/src/main/resources/static/css/header.css
@@ -20,13 +20,13 @@ body{
     height: 10%;
     text-align: center;
     padding: 0 0 1% 0;
-    cursor: pointer;
    	background:white;
    	opacity:.9;
    	top:0;
 }
 .title a{
 	font-size: 60px;
+	cursor: pointer;
 	text-decoration: none;
 	color:crimson;
 	letter-spacing: 2px;
@@ -62,7 +62,7 @@ body{
     z-index: 1000;
    	position:fixed;
     margin-left: 96vw;
-    margin-top:1vh;
+    margin-top:2vh;
     
 }
 .nav-bar button{
@@ -73,4 +73,32 @@ body{
 }
 .nav-bar button:hover{
 	opacity:1;
+}
+.search{
+	position: absolute;
+    z-index: 100;
+    margin-left: 75vw;
+    margin-top: 3vh;
+    width: 20vw;
+}
+
+.search-text{
+	height: 4vh;
+    width: 15vw;
+    border: 2px solid crimson;
+    margin-right: 1vw;
+    display: none;
+    font-size: .9vw;
+    padding-left: .5vw;
+    letter-spacing: 1px;
+}
+
+.search-icon{
+    width: 2vw;
+    cursor: pointer;
+    position: absolute;
+}
+.nav-toggle-icon{
+	width: 2.2vw;
+    margin-top: .7vh;
 }
