--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -6,17 +6,10 @@
     transition: 0.1s;
 }
 .main-img1{
-    width: 92vw;
+    width: 100vw;
     height: 100%;
-    margin-left: 4vw;
 }
 
-.button-div{
-    position: absolute;
-    z-index: 100;
-    margin-top: 15vh;
-    margin-left: 96vw;
-}
 .index-body button{
 	font-size: 40px;
     font-weight: normal;
@@ -34,24 +27,24 @@
 }
 #item-slide-left-btn{
 	position:absolute;
-	margin-left:1vw;
-	margin-top:29vh;
+	margin-left:3vw;
+	margin-top:23vh;
 }
 
 #item-slide-right-btn{
 	position:absolute;
-	margin-left:96vw;
-	margin-top:29vh;
+	margin-left:94vw;
+	margin-top:23vh;
 }
 .new-item{
 	margin-top:2%;
 	width:9999px;
-	height:40vh;
+	height:34vh;
 	transition:0.3s;
 }
 .item-section{
 	width:100vw;
-	padding-left:5vw;
+	padding-left:8vw;
 	display:inline-block;
 	
 }
@@ -61,9 +54,9 @@
 }
 
 .item-section-slot{
-	margin-right:3%;
+	margin-right:2.5vw;
 	border:2px solid black;
-	width:12%;
+	width:12vw;
 	padding:20px;
 	text-align:center;
 	cursor:pointer;
