아이콘 컬러변경,주석 스타일 통일,중복되는 기능 함수로 변경,스크롤 이벤트 추가,베스트글 영역 추가

--- a/src/main/resources/static/css/header.css
+++ b/src/main/resources/static/css/header.css
@@ -83,7 +83,7 @@ body{
 }
 
 .search-text{
-	height: 4vh;
+	height: 35px;
     width: 15vw;
     border: 2px solid crimson;
     margin-right: 1vw;
@@ -98,7 +98,9 @@ body{
     cursor: pointer;
     position: absolute;
 }
+
 .nav-toggle-icon{
 	width: 2.2vw;
-    margin-top: .7vh;
+    margin-top: .6vh;
+    color:#CA1E1E;
 }
