--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,101 +4,121 @@
 <meta charset="utf-8">
 <title>Review Web Site</title>
 <script src="http://code.jquery.com/jquery-latest.min.js"></script>
-<script type="text/javascript" src="./js/index.js"/></script>
+<script type="text/javascript" src="./js/index.js" /></script>
 <link rel="stylesheet" type="text/css" href="./css/index.css?ver=0">
 <script>
-
+	
 </script>
 </head>
 <body>
-<div class="header"></div>
-<div class="index-body">
+	<div class="header"></div>
+	<div class="index-body">
 
-<div class="banner">
-<img class="main-img1"src="../img/1.jpg">
-</div>
-<button class="slide-btn" id="item-slide-left-btn"><</button>
-<button class="slide-btn" id="item-slide-right-btn">></button>
+		<div class="banner">
+			<img class="main-img1" src="../img/1.jpg">
+		</div>
+		<button class="slide-btn" id="item-slide-left-btn"><</button>
+		<button class="slide-btn" id="item-slide-right-btn">></button>
 
-<h1 class="index-title">New Item</h1>
-<div class="new-item">
-	<div class="item-section" id="sec1">
-	<div class="item-section-slot" id="doc-first">
-		<img src="../img/4.jpg">
-		<a href="/">여름 샌들</a>
-		<p>9990원(Sale 5%)</p>
-	</div>
-	<div class="item-section-slot">
-		<img src="../img/5.jpg">
-		<a>라이젠 3700x!!</a>
-		<p>387000원 (Sale 15%)</p>
-	</div>
-	<div class="item-section-slot" id="doc-first">
-		<img src="../img/4.jpg">
-		<a href="/">여름 샌들</a>
-		<p>9990원(Sale 5%)</p>
-	</div>
-		<div class="item-section-slot">
-		<img src="../img/5.jpg">
-		<a>라이젠 3700x</a>
-		<p>387000원 (Sale 15%)</p>
-	</div>
-	<div class="item-section-slot" id="doc-first">
-		<img src="../img/4.jpg">
-		<a href="/">여름 샌들</a>
-		<p>9990원(Sale 5%)</p>
-	</div>
-	</div>
-	
-	<div class="item-section" id="sec2">
-<div class="item-section-slot" id="doc-first">
-		<img src="../img/4.jpg">
-		<a href="/">여름 샌들</a>
-		<p>9990원(Sale 5%)</p>
-	</div><div class="item-section-slot" id="doc-first">
-		<img src="../img/4.jpg">
-		<a href="/">여름 샌들</a>
-		<p>9990원(Sale 5%)</p>
-	</div><div class="item-section-slot" id="doc-first">
-		<img src="../img/4.jpg">
-		<a href="/">여름 샌들</a>
-		<p>9990원(Sale 5%)</p>
-	</div><div class="item-section-slot" id="doc-first">
-		<img src="../img/4.jpg">
-		<a href="/">여름 샌들</a>
-		<p>9990원(Sale 5%)</p>
-	</div>
-	<div class="item-section-slot" id="doc-first">
-		<img src="../img/4.jpg">
-		<a href="/">여름 샌들</a>
-		<p>9990원(Sale 5%)</p>
-	</div>
-	
-	</div>
-</div>
-	<div class="item-section-nav">
-		<div class="nav-circle" id="nav-circle1"></div>
-		<div class="nav-circle" id="nav-circle2"></div>
-	</div>
-	<h1 class="index-title" id="new-review-title">New Review</h1>
-	
-	<div class="new-review">
-	<div class="new-review-slot">
-		<img src="../img/5.jpg">
-		<h1>라이젠 3700x 리뷰</h1>
-		<p>1년 3개월만에 세대교체가 이루어지는 AMD 3세대 라이젠 프로세서가 7월 7일 오늘부로 공식적으로 시장에 선보여진다.
+		<h1 class="index-title">New Item</h1>
+		<p class="index-title-info">새로 올라온 세일하는 물품리스트입니다!</p>
+		<div class="new-item">
+			<div class="item-section" id="sec1">
+				<div class="item-section-slot" id="doc-first">
+					<img src="../img/4.jpg"> <a href="/">여름 샌들</a>
+					<p>9990원(Sale 5%)</p>
+				</div>
+				<div class="item-section-slot">
+					<img src="../img/5.jpg"> <a>라이젠 3700x!!</a>
+					<p>387000원 (Sale 15%)</p>
+				</div>
+				<div class="item-section-slot" id="doc-first">
+					<img src="../img/4.jpg"> <a href="/">여름 샌들</a>
+					<p>9990원(Sale 5%)</p>
+				</div>
+				<div class="item-section-slot">
+					<img src="../img/5.jpg"> <a>라이젠 3700x</a>
+					<p>387000원 (Sale 15%)</p>
+				</div>
+				<div class="item-section-slot" id="doc-first">
+					<img src="../img/4.jpg"> <a href="/">여름 샌들</a>
+					<p>9990원(Sale 5%)</p>
+				</div>
+			</div>
 
-이번 3세대 라이젠은 12nm에서 7nm로 미세공정화 했으며 이를 기반으로 아키텍처 차원에서의 구조적인 변화를 꾀함과 동시에 2세대 제품군들에게서 아쉬웠던 부분들을 보강하고 개선한 구조를 골자로 하고 있다.
+			<div class="item-section" id="sec2">
+				<div class="item-section-slot" id="doc-first">
+					<img src="../img/4.jpg"> <a href="/">여름 샌들</a>
+					<p>9990원(Sale 5%)</p>
+				</div>
+				<div class="item-section-slot" id="doc-first">
+					<img src="../img/4.jpg"> <a href="/">여름 샌들</a>
+					<p>9990원(Sale 5%)</p>
+				</div>
+				<div class="item-section-slot" id="doc-first">
+					<img src="../img/4.jpg"> <a href="/">여름 샌들</a>
+					<p>9990원(Sale 5%)</p>
+				</div>
+				<div class="item-section-slot" id="doc-first">
+					<img src="../img/4.jpg"> <a href="/">여름 샌들</a>
+					<p>9990원(Sale 5%)</p>
+				</div>
+				<div class="item-section-slot" id="doc-first">
+					<img src="../img/4.jpg"> <a href="/">여름 샌들</a>
+					<p>9990원(Sale 5%)</p>
+				</div>
 
-그래서 케이벤치에서는 이번 Zen2의 아키텍처에서 어떠한 변경점이 있는지 살펴보고난 뒤, 전세대 R7 2700X와 동급 라인업인 R7 3700X의 성능과 그 차이를 살펴보는 시간을 마련했다. </p>
-	</div>
-	<div class="new-review-slot">
-		<img src="../img/7.jpg">
-		<h1>LG전자 FQ19P8DRA2 리뷰</h1>
-		<p>바야흐로 에어컨의 계절이다. 작년 6월 후엔 설치가 2~3주 가량 걸려 무더운 여름날이 되어서야 겨우 에어컨을 설치했던 기억을 되짚어보면, 다행히도 5월이 구매 적기임에 틀림없다. 그렇다면 어디서 구매하는 것이 저렴하고, 보다 스트레스를 적게 받을 수 있을까? 온라인 에어컨 구매시 실질 꿀팁을 살펴보도록 하자. </p>
-	</div>
+			</div>
+		</div>
+		<div class="item-section-nav">
+			<div class="nav-circle" id="nav-circle1"></div>
+			<div class="nav-circle" id="nav-circle2"></div>
+		</div>
+		<h1 class="index-title" id="new-review-title">New Review</h1>
+		<p class="index-title-info" id="new-review-title-info">새로 올라온 따끈한
+			리뷰입니다!</p>
+
+		<div class="review" id="new-review">
+			<div class="review-slot" id="new-review-slot1">
+				<img src="../img/5.jpg">
+				<h1>라이젠 3700x 리뷰</h1>
+				<p>1년 3개월만에 세대교체가 이루어지는 AMD 3세대 라이젠 프로세서가 7월 7일 오늘부로 공식적으로 시장에
+					선보여진다. 이번 3세대 라이젠은 12nm에서 7nm로 미세공정화 했으며 이를 기반으로 아키텍처 차원에서의 구조적인
+					변화를 꾀함과 동시에 2세대 제품군들에게서 아쉬웠던 부분들을 보강하고 개선한 구조를 골자로 하고 있다. 그래서
+					케이벤치에서는 이번 Zen2의 아키텍처에서 어떠한 변경점이 있는지 살펴보고난 뒤, 전세대 R7 2700X와 동급 라인업인
+					R7 3700X의 성능과 그 차이를 살펴보는 시간을 마련했다.</p>
+			</div>
+			<div class="review-slot" id="new-review-slot2">
+				<img src="../img/7.jpg">
+				<h1>LG전자 FQ19P8DRA2 리뷰</h1>
+				<p>바야흐로 에어컨의 계절이다. 작년 6월 후엔 설치가 2~3주 가량 걸려 무더운 여름날이 되어서야 겨우 에어컨을
+					설치했던 기억을 되짚어보면, 다행히도 5월이 구매 적기임에 틀림없다. 그렇다면 어디서 구매하는 것이 저렴하고, 보다
+					스트레스를 적게 받을 수 있을까? 온라인 에어컨 구매시 실질 꿀팁을 살펴보도록 하자.</p>
+			</div>
+		</div>
+
+		<h1 class="index-title" id="best-review-title">Best Review</h1>
+		<p class="index-title-info">최근 인기있는 리뷰입니다.</p>
+
+		<div class="review" id="best-review">
+			<div class="review-slot" id="best-review-slot1">
+				<img src="../img/5.jpg">
+				<h1>라이젠 3700x 리뷰</h1>
+				<p>1년 3개월만에 세대교체가 이루어지는 AMD 3세대 라이젠 프로세서가 7월 7일 오늘부로 공식적으로 시장에
+					선보여진다. 이번 3세대 라이젠은 12nm에서 7nm로 미세공정화 했으며 이를 기반으로 아키텍처 차원에서의 구조적인
+					변화를 꾀함과 동시에 2세대 제품군들에게서 아쉬웠던 부분들을 보강하고 개선한 구조를 골자로 하고 있다. 그래서
+					케이벤치에서는 이번 Zen2의 아키텍처에서 어떠한 변경점이 있는지 살펴보고난 뒤, 전세대 R7 2700X와 동급 라인업인
+					R7 3700X의 성능과 그 차이를 살펴보는 시간을 마련했다.</p>
+			</div>
+			<div class="review-slot" id="best-review-slot2">
+				<img src="../img/7.jpg">
+				<h1>LG전자 FQ19P8DRA2 리뷰</h1>
+				<p>바야흐로 에어컨의 계절이다. 작년 6월 후엔 설치가 2~3주 가량 걸려 무더운 여름날이 되어서야 겨우 에어컨을
+					설치했던 기억을 되짚어보면, 다행히도 5월이 구매 적기임에 틀림없다. 그렇다면 어디서 구매하는 것이 저렴하고, 보다
+					스트레스를 적게 받을 수 있을까? 온라인 에어컨 구매시 실질 꿀팁을 살펴보도록 하자.</p>
+			</div>
+		</div>
 
 	</div>
-</div>
 </body>
 </html>
