--- a/src/main/resources/static/include/header.html
+++ b/src/main/resources/static/include/header.html
@@ -22,12 +22,13 @@
 <div class="nav-bar">
 <button class="nav-toggle-btn" id="toggle-off"><img class="nav-toggle-icon" src="../img/icon/list.png"></button>
 </div>
-
+<img class="login-icon" src="../img/icon/round-account-button.png">
 <div class="title">
 <div class="search">
 	<input class="search-text" type="text" maxlength="40" placeholder="검색어를 입력해주세요.">
 	<img class="search-icon" id="search-toggle-btn"src="../img/icon/magnifier.png">
 </div>
+
 <a href="/">Review Web Site</a>
 </div>
 
