--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -98,7 +98,7 @@
 		</div>
 
 		<h1 class="index-title" id="best-review-title">Best Review</h1>
-		<p class="index-title-info">최근 인기있는 리뷰입니다.</p>
+		<p class="index-title-info" id="best-review-title-info">최근 인기있는 리뷰입니다.</p>
 
 		<div class="review" id="best-review">
 			<div class="review-slot" id="best-review-slot1">
