--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,6 +7,41 @@
 <script type="text/javascript" src="./js/index.js" /></script>
 <link rel="stylesheet" type="text/css" href="./css/index.css?ver=0">
 <script>
+	$().ready(()=>{
+		getNewReview();
+		
+		
+	});
+	function getNewReview(){
+	    var url="/ajax/getNewReview";  
+	    $.ajax({      
+	        type:"POST",  
+	        url:url,      
+	        success:function(data){   
+	            console.log(data);
+	            console.log(data[1].THUM_IMG_PATH);
+	            var list = data;
+	            
+	            for(var i=0;i<list.length;i++){
+	            	var newReview = '<div class="review-slot" id="new-review-slot'+(i+1)+'">'
+	            	+'<img src="'+list[i].THUM_IMG_PATH+'">'
+	            	+'<h1>'+list[i].TITLE+'</h1>'
+	            	+'<p>'+list[i].CONTENTS+'</p>'
+	            	+'</div>'
+	            	$('#new-review').append(newReview);
+	            }
+	            
+	            
+	        },   
+	        error:function(e){  
+	          console.log(e);
+	        }
+	       });
+	}
+	        
+	      
+
+
 	
 </script>
 </head>
@@ -79,7 +114,7 @@
 			리뷰입니다!</p>
 
 		<div class="review" id="new-review">
-			<div class="review-slot" id="new-review-slot1">
+			<!-- <div class="review-slot" id="new-review-slot1">
 				<img src="../img/5.jpg">
 				<h1>라이젠 3700x 리뷰</h1>
 				<p>1년 3개월만에 세대교체가 이루어지는 AMD 3세대 라이젠 프로세서가 7월 7일 오늘부로 공식적으로 시장에
@@ -94,7 +129,7 @@
 				<p>바야흐로 에어컨의 계절이다. 작년 6월 후엔 설치가 2~3주 가량 걸려 무더운 여름날이 되어서야 겨우 에어컨을
 					설치했던 기억을 되짚어보면, 다행히도 5월이 구매 적기임에 틀림없다. 그렇다면 어디서 구매하는 것이 저렴하고, 보다
 					스트레스를 적게 받을 수 있을까? 온라인 에어컨 구매시 실질 꿀팁을 살펴보도록 하자.</p>
-			</div>
+			</div> -->
 		</div>
 
 		<h1 class="index-title" id="best-review-title">Best Review</h1>
