--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -17,67 +17,26 @@
 		</div>
 		<button class="slide-btn" id="item-slide-left-btn"><</button>
 		<button class="slide-btn" id="item-slide-right-btn">></button>
-
-		<h1 class="index-title">New Item</h1>
-		<p class="index-title-info">새로 올라온 세일하는 물품리스트입니다!</p>
-		<div class="new-item">
-			<div class="item-section" id="sec1">
-				<div class="item-section-slot" id="doc-first">
-					<img src="../img/4.jpg"> <a href="/">여름 샌들</a>
-					<p>9990원(Sale 5%)</p>
-				</div>
-				<div class="item-section-slot">
-					<img src="../img/5.jpg"> <a>라이젠 3700x!!</a>
-					<p>387000원 (Sale 15%)</p>
-				</div>
-				<div class="item-section-slot" id="doc-first">
-					<img src="../img/4.jpg"> <a href="/">여름 샌들</a>
-					<p>9990원(Sale 5%)</p>
-				</div>
-				<div class="item-section-slot">
-					<img src="../img/5.jpg"> <a>라이젠 3700x</a>
-					<p>387000원 (Sale 15%)</p>
-				</div>
-				<div class="item-section-slot" id="doc-first">
-					<img src="../img/4.jpg"> <a href="/">여름 샌들</a>
-					<p>9990원(Sale 5%)</p>
-				</div>
-			</div>
-
-			<div class="item-section" id="sec2">
-				<div class="item-section-slot" id="doc-first">
-					<img src="../img/4.jpg"> <a href="/">여름 샌들</a>
-					<p>9990원(Sale 5%)</p>
-				</div>
-				<div class="item-section-slot" id="doc-first">
-					<img src="../img/4.jpg"> <a href="/">여름 샌들</a>
-					<p>9990원(Sale 5%)</p>
-				</div>
-				<div class="item-section-slot" id="doc-first">
-					<img src="../img/4.jpg"> <a href="/">여름 샌들</a>
-					<p>9990원(Sale 5%)</p>
-				</div>
-				<div class="item-section-slot" id="doc-first">
-					<img src="../img/4.jpg"> <a href="/">여름 샌들</a>
-					<p>9990원(Sale 5%)</p>
-				</div>
-				<div class="item-section-slot" id="doc-first">
-					<img src="../img/4.jpg"> <a href="/">여름 샌들</a>
-					<p>9990원(Sale 5%)</p>
-				</div>
-
-			</div>
-		</div>
-		<div class="item-section-nav">
-			<div class="nav-circle" id="nav-circle1"></div>
-			<div class="nav-circle" id="nav-circle2"></div>
-		</div>
+		
 		<h1 class="index-title" id="new-review-title">New Review</h1>
 		<p class="index-title-info" id="new-review-title-info">새로 올라온 따끈한
 			리뷰입니다!</p>
 
 		<div class="review" id="new-review">
 		
+		</div>
+
+		<h1 class="index-title" >Sale Item</h1>
+		<p class="index-title-info">세일하는 물품리스트입니다!</p>
+		
+		<div class="sale-item">
+			<div class="item-section" id="item-sec1">	</div>
+
+			<div class="item-section" id="item-sec2">	</div>
+		</div>
+		<div class="item-section-nav">
+			<div class="nav-circle" id="nav-circle1"></div>
+			<div class="nav-circle" id="nav-circle2"></div>
 		</div>
 
 		<h1 class="index-title" id="best-review-title">Best Review</h1>
