--- a/src/main/resources/static/css/header.css
+++ b/src/main/resources/static/css/header.css
@@ -1,3 +1,5 @@
+@font-face { font-family: 'NanumSquareRound'; src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_two@1.0/NanumSquareRound.woff') format('woff'); font-weight: normal; font-style: normal; }
+
 body{
 	margin:0;
 	overflow-x:hidden;
@@ -8,13 +10,26 @@ body{
 	top:0px;
 	z-index:1000;
 }
-.title{
+.title a{
 	font-family: 'Damion', cursive;
 }
 .nav{
 	font-family: 'Nanum Gothic', sans-serif;
 }
-
+h1{
+	font-family: 'Jua', cursive;
+	letter-spacing: 1px;
+	font-weight: 500;
+}
+p{
+	font-family: 'NanumSquareRound',sans-serif;
+	letter-spacing: 1px;
+	font-weight: 500;
+}
+a{
+	font-family: 'NanumSquareRound',sans-serif;
+	letter-spacing: 1px;
+}
 .title{
     width: 100%;
     height: 10%;
@@ -31,8 +46,9 @@ body{
 	color:crimson;
 	letter-spacing: 2px;
 }
+
 .nav{
-    width: 15%;
+    width: 16%;
     background: white;
     opacity:.9;
     text-align: center;
@@ -40,6 +56,7 @@ body{
     height:100vh;
     position:absolute;
     z-index:999;
+    overflow-y:scroll;
 }
 .nav div{
 	margin-top:10%;
@@ -59,13 +76,16 @@ body{
 	font-size: 1.3vw;
 	cursor:pointer;
 }
+.nav h2:hover{
+	color:crimson;
+}
 .nav ul{
-	padding-left:40%;
+	padding-left:35%;
 	display:none;
 }
 .nav li{
 	text-align:left;
-	margin-bottom:5%;
+	margin-bottom:10%;
 }
 .nav a:hover{
 	opacity:1;
