--- a/src/main/resources/static/include/header.html
+++ b/src/main/resources/static/include/header.html
@@ -6,6 +6,7 @@
 <script src="../js/header.js"></script>
 <link href="https://fonts.googleapis.com/css?family=Nanum+Gothic&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Damion&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Jua&display=swap" rel="stylesheet">
 </head>
 <meta charset="utf-8">
 
