회원가입 기능 비밀번호 단방향 암호화 추가,네비게이션 애니메이션 추가,로그인 기능 추가

--- a/src/main/resources/static/css/header.css
+++ b/src/main/resources/static/css/header.css
@@ -57,14 +57,22 @@ a{
     position:absolute;
     z-index:999;
     overflow-y:scroll;
+    overflow-x:hidden;
 }
 .nav div{
 	margin-top:10%;
 }
 .nav div:first-child{
 	margin-top:25%;
-	letter-spacing:1px;
 	margin-bottom:11%;
+}
+.nav-title{
+	font-weight:bold;
+	color:crimson;
+	letter-spacing: .3vw;
+	font-size:1.5vw;
+	transform: translateX(100vw);
+	transition:.5s;
 }
 .nav a{
 	text-decoration: none;
@@ -75,10 +83,12 @@ a{
 .nav h2{
 	font-size: 1.3vw;
 	cursor:pointer;
+	transform: translateX(100vw);
 }
 .nav h2:hover{
 	color:crimson;
 }
+
 .nav ul{
 	padding-left:35%;
 	display:none;
