--- a/src/main/resources/static/include/header.html
+++ b/src/main/resources/static/include/header.html
@@ -11,7 +11,7 @@
 <meta charset="utf-8">
 
 <div class="nav">
-<div><h1 style="font-weight:bold;color:crimson">MENU</h1></div>
+<div><h1 class="nav-title">CateGory</h1></div>
 
 </div>
 
