--- a/src/main/resources/templates/account.html
+++ b/src/main/resources/templates/account.html
@@ -14,8 +14,8 @@
 			<h1 class="login-title">로그인</h1>
 			<form class="login-form" name="login-form">
 				<label for="id">ID</label><br /> <input class="id"
-					type="text" name="id"><br /> <label for="pw">Password</label><br />
-				<input class="pw" type="password" name="pw">
+					type="text" name="id" maxlength="50"><br /> <label for="pw">Password</label><br />
+				<input class="pw" type="password" name="pw" maxlength="50">
 			</form>
 				<button class="login-btn">Login</button>
 			<a class="signform-call-btn">아이디가 없으신가요?</a>
@@ -28,16 +28,16 @@
 
 			<form class="sign-form" name="sign-form">
 				<label for="email">Email </label><br /> 
-				<input class="email"type="email" placeholder="인증에 사용하실 이메일 주소" name="email">
+				<input class="email"type="email" placeholder="인증에 사용하실 이메일 주소" name="email" maxlength="50">
 				<img class="email-check-icon" src="../img/icon/error.png"><br />
 					 <label for="id">ID</label><br /> 
-					 <input class="id" type="text" placeholder="로그인 시 사용하실 아이디" name="id">
+					 <input class="id" type="text" placeholder="로그인 시 사용하실 아이디" name="id" maxlength="50">
 					 <img class="id-check-icon" src="../img/icon/error.png"><br />
 				<label for="id">Password</label><br /> 
-				<input class="pw" type="password" placeholder="로그인 시 사용하실 비밀번호" name="pw"> 
+				<input class="pw" type="password" placeholder="로그인 시 사용하실 비밀번호" name="pw" maxlength="50"> 
 				<img class="pw-check-icon" src="../img/icon/error.png"><br />
 				<label for="pw">Password Check</label><br /> 
-				<input class="pw-check" type="password" placeholder="비밀번호 한번 더 입력">
+				<input class="pw-check" type="password" placeholder="비밀번호 한번 더 입력" maxlength="50">
 				<img class="pw2-check-icon" src="../img/icon/error.png"><br />
 			</form>
 				<button class="sign-btn">Sign Up</button>
@@ -49,7 +49,7 @@
 
 			<form class="find-form" name="find-form">
 				<label for="email">Email </label><br /> <input class="email"
-					type="email" placeholder="가입할 때 입력하신 이메일 주소" name="email">
+					type="email" placeholder="가입할 때 입력하신 이메일 주소" name="email" maxlength="50">
 			</form>	
 				<button class="find-btn"> OK! </button>
 			<a class="back-call-btn">로그인 화면으로 돌아갈까요?</a>
