--- a/src/main/resources/templates/account/account.html
+++ b/src/main/resources/templates/account/account.html
@@ -3,8 +3,8 @@
 <head>
 <meta charset="UTF-8">
 <script src="http://code.jquery.com/jquery-latest.min.js"></script>
-<script type="text/javascript" src="./js/account.js"></script>
-<link rel="stylesheet" href="./css/account.css">
+<script type="text/javascript" src="./js/account/account.js"></script>
+<link rel="stylesheet" href="./css/account/account.css">
 <title>Insert title here</title>
 </head>
 <body>
