--- a/src/main/resources/static/css/account/account.css
+++ b/src/main/resources/static/css/account/account.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 body{
 	overflow:hidden;
-	background-image:url('../img/background/cuba-1638594_1920.jpg');
+	background-image:url('../../img/background/cuba-1638594_1920.jpg');
 	font-family: 'Nanum Gothic', sans-serif;
 }
 .account{
