--- a/src/main/resources/static/include/header.html
+++ b/src/main/resources/static/include/header.html
@@ -2,8 +2,8 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <script src="http://code.jquery.com/jquery-latest.min.js"></script>
-<link rel="stylesheet" href="../css/header.css">
-<script src="../js/header.js"></script>
+<link rel="stylesheet" href="../css/include/header.css">
+<script src="../js/include/header.js"></script>
 <link href="https://fonts.googleapis.com/css?family=Nanum+Gothic&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Damion&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Jua&display=swap" rel="stylesheet">
