--- a/src/main/resources/templates/search/searchpage.html
+++ b/src/main/resources/templates/search/searchpage.html
@@ -3,8 +3,8 @@
 <head>
 <meta charset="UTF-8">
 <script src="http://code.jquery.com/jquery-latest.min.js"></script>
-<script type="text/javascript" src="./js/searchpage.js"></script>
-<link rel="stylesheet" href="./css/searchpage.css">
+<script type="text/javascript" src="./js/search/searchpage.js"></script>
+<link rel="stylesheet" href="./css/search/searchpage.css">
 <title>Insert title here</title>
 </head>
 <body>
