review read 파일이름 list로 변경,review list 서브카테고리에 맞게 데이터 바인딩,list페이지 css 처리, menu 애니메이션 페이지 최초진입 시로 변경,list페이지 uri reviewlist로 변경 , db에서 select 사용할 데이터만 가져오독 변경(list 메소드만 나머지도 수정 필요)

--- a/src/main/resources/templates/review/list.html
+++ b/src/main/resources/templates/review/list.html
@@ -3,15 +3,15 @@
 <head>
 <meta charset="UTF-8">
 <script src="http://code.jquery.com/jquery-latest.min.js"></script>
-<script type="text/javascript" src="../js/review/read.js"></script>
-<link rel="stylesheet" href="../css/review/read.css">
+<script type="text/javascript" src="../js/review/list.js"></script>
+<link rel="stylesheet" href="../css/review/list.css">
 <title>Insert title here</title>
 </head>
 <body>
 	<div class="header"></div>
 
 	<h2 class="subcategory-title"> 리뷰</h2>
-	<div class="read-menu">
+	<div class="list-menu">
 	<h1>상세검색</h1>
 		<div class="menu-sec">
 			<h2>제조사</h2>
@@ -30,8 +30,9 @@
 				<img src="../img/icon/magnifier.png">
 		</div>
 	</div>
-	<div class="read-list">
+	<div class="review-list">
 		<h1 class="subcategory-list-title"></h1>
+		<table class="review-item-table"></table>
 	</div>
 </body>
 </html>
