--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -80,6 +80,9 @@
 	text-decoration: none;
 	font-size:1vw;
 	padding-bottom:5px;
+	overflow: hidden;
+	text-overflow: ellipsis;
+    white-space: nowrap; 
 }
 .item-section-slot p{
     font-size: 1.2vw;
@@ -138,6 +141,9 @@
 	font-size:1.5vw;
 	line-height: 5vh;
 	margin-bottom:0;
+	overflow: hidden;
+	text-overflow: ellipsis;
+    white-space: nowrap; 
 }
 .review-slot a{
 	font-weight: 800;
