리뷰페이지 마우스오버 오버레이 기능 css추가, 오버레이 클릭시 해당글 주소로 리디렉트 기능 추가

--- a/src/main/resources/static/css/include/header.css
+++ b/src/main/resources/static/css/include/header.css
@@ -102,7 +102,7 @@ a{
 }
 .nav-bar{
     z-index: 1000;
-   	position:fixed;
+   	position:absolute;
     margin-left: 96vw;
     margin-top:2vh;
     
