--- a/src/main/resources/templates/review/list.html
+++ b/src/main/resources/templates/review/list.html
@@ -9,25 +9,27 @@
 </head>
 <body>
 	<div class="header"></div>
-
-	<h2 class="subcategory-title"> 리뷰</h2>
+	<div class="overlay">
+		<h1 class="overlay-plus">+</h1>
+		<h1 class="overlay-info">자세히 보러가기</h1>
+	</div>
+	<h2 class="subcategory-title">리뷰</h2>
 	<div class="list-menu">
-	<h1>상세검색</h1>
+		<h1>상세검색</h1>
 		<div class="menu-sec">
 			<h2>제조사</h2>
-			<input type="checkbox"><label>삼성</label>
-			<input type="checkbox"><label>LG</label>
+			<input type="checkbox"><label>삼성</label> <input
+				type="checkbox"><label>LG</label>
 
 		</div>
 		<div class="menu-sec">
 			<h2>판매가</h2>
-				<input type="checkbox"><label>1만원 이하</label>
-			<input type="checkbox"><label>1~10만원</label>
-				<input type="checkbox"><label>10~50만원</label>
-					<input type="checkbox"><label>50~100만원</label>
-				<input type="checkbox"><label>100만원이상</label>
-				<label>직접입력 :</label><input class="review-search" type="text">
-				<img src="../img/icon/magnifier.png">
+			<input type="checkbox"><label>1만원 이하</label> <input
+				type="checkbox"><label>1~10만원</label> <input type="checkbox"><label>10~50만원</label>
+			<input type="checkbox"><label>50~100만원</label> <input
+				type="checkbox"><label>100만원이상</label> <label>직접입력 :</label><input
+				class="review-search" type="text"> <img
+				src="../img/icon/magnifier.png">
 		</div>
 	</div>
 	<div class="review-list">
